# practice-tooled

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: champion.json  item.json  wiki_items.json
src/: armor_reducer.rs  attack.rs  core.rs  item_effects.rs  lib.rs  load_champion.rs  load_dd_item.rs  load_item.rs  load_wiki_item.rs  main.rs  target.rs  time_manager.rs
src/champions/: champion.rs  leblanc.rs  mod.rs  target_dummy.rs  vi.rs
tests/: attack_integration.rs
