[package]
name = "practice_tooled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
memoize = "0.4.0"
rstest = "0.17.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
